# cosmos-editor

./: .gitignore  .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt
Core/src/: application.cpp  application.hpp  core.hpp  layer.cpp  layer.hpp  window.cpp  window.hpp
Core/src/utils/: memory_utils.hpp  utils.hpp
CosmosEditor/: CMakeLists.txt
CosmosEditor/src/: application.cpp  application.hpp  main.cpp
CosmosEditor/src/layers/: editor_layer.cpp  editor_layer.hpp  editor_ui_layer.cpp  editor_ui_layer.hpp
